add Cyra's docs functions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ tempfile = "3.19.1"
 rand = "0.8.5"
 serde_json = "1.0.140"
 futures = "=0.3.31"
-quic-rpc = "0.19.0"
+quic-rpc = "0.18.3"
 axum = { version = "0.7.9", features = ["multipart", "macros"] }
 lazy_static = "1.5.0"
 bytes = "1.10.1"
@@ -23,3 +23,7 @@ tower-http = { version = "0.6.2", features = ["cors"] }
 serde = "1.0.219"
 hex = "0.4.3"
 base64 = "0.22.1"
+regex = "1.11.1"
+data-encoding = "2.9.0"
+jsonschema = "0.30.0"
+sp-core = "36.1.0"
