add cli command, docs to persistent storage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ regex = "1.11.1"
 data-encoding = "2.9.0"
 jsonschema = "0.30.0"
 sp-core = "36.1.0"
+clap = { version = "4.5", features = ["derive"] }
