--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ iroh = "0.33.0"
 iroh-blobs = { version = "0.33.1", features = ["rpc"]}
 iroh-docs = { version = "0.33.0", features = ["rpc"]}
 iroh-gossip = "0.33.0"
+iroh-base = "=0.33.0"
 tokio = { version = "1.30.0", features = ["full"] }
 tracing = "0.1"
 anyhow = "1"
