--- a/helpers/Cargo.toml
+++ b/helpers/Cargo.toml
@@ -13,3 +13,4 @@ regex = "1.11.1"
 iroh-docs = { version = "0.33.0", features = ["rpc"] }
 iroh-blobs = { version = "0.33.1", features = ["rpc"] }
 iroh-base = "=0.33.0"
+axum = { version = "0.7.9", features = ["multipart", "macros"] }
