Implement connection with CORD, Signer trait for keystore wrapper, make CORD call in create_author

--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -16,3 +16,4 @@ node = { path = "../node" }
 router = { path = "../router" }
 helpers = { path = "../helpers" }
 gateway = { path = "../gateway" }
+cord = { path = "../cord" }
