--- a/helpers/Cargo.toml
+++ b/helpers/Cargo.toml
@@ -14,3 +14,7 @@ iroh-docs = { version = "0.33.0", features = ["rpc"] }
 iroh-blobs = { version = "0.33.1", features = ["rpc"] }
 iroh-base = "=0.33.0"
 axum = { version = "0.7.9", features = ["multipart", "macros"] }
+subxt-rpcs = "0.42.1"
+subxt = "0.42.1"
+
+keystore = { path = "../keystore" }
